--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -690,7 +690,7 @@
                                     <constraint firstAttribute="width" constant="125" id="2f3-VU-c8n"/>
                                     <constraint firstAttribute="height" constant="40" id="Ju9-UA-EwB"/>
                                 </constraints>
-                                <state key="normal" title="Accept">
+                                <state key="normal" title="Button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
