--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -397,6 +397,7 @@
                         <outlet property="messageText" destination="O0c-nk-wuR" id="R78-fb-rEq"/>
                         <outlet property="sendButtonOutlet" destination="I5v-iS-XAi" id="0lZ-Q8-MQp"/>
                         <outlet property="tableView" destination="jIQ-mB-HAb" id="Vml-7J-B1j"/>
+                        <segue destination="9yp-J1-2IC" kind="show" identifier="toNoChat" id="amq-ZL-APA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Th-9z-fjO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1136,6 +1137,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eja-9B-f0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1191" y="1041"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="O3H-Ec-d1i">
+            <objects>
+                <viewController id="9yp-J1-2IC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0Zt-XD-GNQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="LCZ-w1-FZc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5ch-tx-NOR">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Once you acccept a request, a chat window will appear here." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xsd-Jv-2z4">
+                                <rect key="frame" x="167" y="269" width="267" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="267" id="Ykp-cN-pZk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Xsd-Jv-2z4" firstAttribute="top" secondItem="0Zt-XD-GNQ" secondAttribute="bottom" constant="205" id="Wm5-B1-Rka"/>
+                            <constraint firstItem="Xsd-Jv-2z4" firstAttribute="centerY" secondItem="5ch-tx-NOR" secondAttribute="centerY" id="Yov-wE-QDX"/>
+                            <constraint firstItem="Xsd-Jv-2z4" firstAttribute="centerX" secondItem="5ch-tx-NOR" secondAttribute="centerX" id="g1f-4F-Cyh"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DE4-6Q-9am" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1947" y="1729"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
