Queries based on what user can help with

--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -1165,12 +1165,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Once you acccept a request, a chat window will appear here." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xsd-Jv-2z4">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Once you acccept a request, a chat window will appear here." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xsd-Jv-2z4">
                                 <rect key="frame" x="185" y="269" width="230" height="80"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="267" id="Ykp-cN-pZk"/>
+                                    <constraint firstAttribute="width" constant="230" id="Ykp-cN-pZk"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1178,7 +1178,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Xsd-Jv-2z4" firstAttribute="top" secondItem="0Zt-XD-GNQ" secondAttribute="bottom" constant="205" id="Wm5-B1-Rka"/>
-                            <constraint firstItem="Xsd-Jv-2z4" firstAttribute="centerY" secondItem="5ch-tx-NOR" secondAttribute="centerY" id="Yov-wE-QDX"/>
+                            <constraint firstItem="Xsd-Jv-2z4" firstAttribute="centerY" secondItem="5ch-tx-NOR" secondAttribute="centerY" constant="9" id="Yov-wE-QDX"/>
                             <constraint firstItem="Xsd-Jv-2z4" firstAttribute="centerX" secondItem="5ch-tx-NOR" secondAttribute="centerX" id="g1f-4F-Cyh"/>
                         </constraints>
                     </view>
